# cross-engine

./: .gitignore  .gitmodules  CMakeLists.txt  README.md
project/: CMakeLists.txt  shared_scripts.sh
project/android/: .gitignore  build.gradle  local.properties
project/android/app/: build.gradle
project/android/app/jni/: CMakeLists.txt  SDL
project/android/app/jni/src/: CMakeLists.txt
project/android/app/src/main/java/org/libsdl/app/: SDLActivity.java
project/android/gradle/wrapper/: gradle-wrapper.properties
project/assets/shaders/: simpleShader.frag  simpleShader.vert
project/console/: CMakeLists.txt
project/javascript/: CMakeLists.txt  build.sh  setup.sh
project/main/: main.cpp
project/main/core/: graphics.cpp  graphics.h
project/main/rendering/: objectExamples.h  shader.cpp  shader.h  vertex.h
project/main/shaders/: simple_vertex_shader.h
s/: build_web.py  common.py  get_dependencies.py  serve_web.py
